--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,6 +18,7 @@ jobs:
           channel: stable
           flutter-version-file: pubspec.yaml
       - run: flutter pub get
+      - run: flutter analyze
       - run: flutter test --coverage # Run tests and generate coverage report
       - run: flutter build web --release
       - uses: FirebaseExtended/action-hosting-deploy@v0
