--- a/renovate.json
+++ b/renovate.json
@@ -2,9 +2,9 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base",
-    "config:best-practices",
-    "group:all",
+    "config:recommended",
     "schedule:daily",
+    ":configMigration",
     ":automergeAll",
     ":automergePr",
     ":automergeRequireAllStatusChecks",
