fix file path matching

--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,7 @@
   },
   "packageRules": [
     {
-      "matchPaths": ["android/.*"],
+      "matchFileNames": ["android/**"],
       "enabled": false
     }
   ]
