remove an extra "config:recommended",

--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,6 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
-    "config:recommended",
     "schedule:daily",
     ":configMigration",
     ":automergeAll",
@@ -21,9 +20,7 @@
   },
   "packageRules": [
     {
-      "matchFileNames": [
-        "android/**"
-      ],
+      "matchFileNames": ["android/**"],
       "enabled": false
     }
   ]
